bundles/iptables/files/rules.v4
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# custom mangle rules start
% for rule in sorted(mangle):
${rule}
% endfor
# custom mangle rules end
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# nat interface start
% for nat_interface in sorted(nat_interfaces):
-A POSTROUTING -o ${nat_interface} -s 10.0.0.0/8 -j MASQUERADE
-A POSTROUTING -o ${nat_interface} -s 172.16.0.0/12 -j MASQUERADE
-A POSTROUTING -o ${nat_interface} -s 192.168.0.0/16 -j MASQUERADE
% endfor
# nat interface end
# custom nat rules start
% for rule in sorted(nat):
${rule}
% endfor
# custom nat rules end
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
# custom nat rules start
% for rule in sorted(filter):
${rule}
% endfor
# custom nat rules end
COMMIT
